aci/allow-instance.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-instance
  namespace: integration-demo
  annotations:
   rules.networkpolicy.tigera.io/match-security-groups: "true"
spec:
  podSelector:
    matchLabels:
      app: pod-tester
  ingress:
  - from:
    - podSelector:
        matchLabels:
          sg.aws.tigera.io/sg-12345678901234: ""
