aci/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: integration-demo
spec:
  podSelector:
    matchLabels: {}
