aci/host.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: platform.master-node-policy
spec:
  tier: platform
  order: 2100
  selector: env == "master"
  namespaceSelector: ''
  serviceAccountSelector: ''
  ingress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports:
          - '22'
  egress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        ports:
          - '22'
  doNotTrack: false
  applyOnForward: false
  preDNAT: false
  types:
    - Ingress
    - Egress
